Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_CreateLSID (int *plLSID);

TANGOAPI int TANGOCALL LSX_FreeLSID (int lLSID);

TANGOAPI int TANGOCALL LSX_SetTrigCount (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetControllerSteps (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetControllerFactor (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);


TANGOAPI int TANGOCALL LSX_GetControllerTWDelay (int lLSID, int *plCtrTWDelay);

TANGOAPI int TANGOCALL LSX_GetControllerTimeout (int lLSID, int *plACtrTimeout);

TANGOAPI int TANGOCALL LSX_SetCtrFastMoveOn (int lLSID);

TANGOAPI int TANGOCALL LSX_SetCtrFastMoveOff (int lLSID);

TANGOAPI int TANGOCALL LSX_GetCtrFastMove (int lLSID, BOOL *pbActive);

TANGOAPI int TANGOCALL LSX_ClearCtrFastMoveCounter (int lLSID);

TANGOAPI int TANGOCALL LSX_GetCtrFastMoveCounter (int lLSID, int *plXC, int *plYC, int *plZC, int *plRC);

TANGOAPI int TANGOCALL LSX_ClearEncoder (int lLSID, int lAxis);

TANGOAPI int TANGOCALL LSX_GetEncoder (int lLSID, double *pdXP, double *pdYP, double *pdZP, double *pdRP);

TANGOAPI int TANGOCALL LSX_GetTrigger (int lLSID, BOOL *pbATrigger);

TANGOAPI int TANGOCALL LSX_GetTriggerPar (int lLSID, int *plAxis, int *plMode, int *plSignal, double *pdDistance);

TANGOAPI int TANGOCALL LSX_GetTrigCount (int lLSID, int *plValue);


TANGOAPI int TANGOCALL LSX_SetTVRInPulse (int lLSID, int lAxis, BOOL bDirection);

TANGOAPI int TANGOCALL LSX_GetSnapshot (int lLSID, BOOL *pbASnapshot);

TANGOAPI int TANGOCALL LSX_SetSnapshotFilter (int lLSID, int lTime);

TANGOAPI int TANGOCALL LSX_GetSnapshotFilter (int lLSID, int *plTime);

TANGOAPI int TANGOCALL LSX_GetSnapshotPar (int lLSID, BOOL *pbHigh, BOOL *pbAutoMode);

TANGOAPI int TANGOCALL LSX_GetLimit (int lLSID, int lAxis, double *pdMinRange, double *pdMaxRange);

TANGOAPI int TANGOCALL LSX_JoyChangeAxis (int lLSID, BOOL bValue);

TANGOAPI int TANGOCALL LSX_GetJoyChangeAxis (int lLSID, BOOL *pbValue);