Tango/DLL Examples/Delphi_XE8/Tango_DLL.pas

function LSX_GetControllerSteps(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetControllerFactor(LSID: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetControllerTWDelay(LSID: Integer; var CtrTWDelay: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetControllerTimeout(LSID: Integer; var ACtrTimeout: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetCtrFastMoveOn(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetCtrFastMoveOff(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetCtrFastMove(LSID: Integer; var Active: LongBool): Integer; stdcall; external TangoDLL;
function LSX_ClearCtrFastMoveCounter(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetCtrFastMoveCounter(LSID: Integer; var XC, YC, ZC, RC: Integer): Integer; stdcall; external TangoDLL;
function LSX_ClearEncoder(LSID: Integer; Axis: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetEncoder(LSID: Integer; var XP, YP, ZP, RP: Double): Integer; stdcall; external TangoDLL;
function LSX_GetTrigger(LSID: Integer; var ATrigger: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetTriggerPar(LSID: Integer; var Axis, Mode, Signal: Integer; var Distance: Double): Integer; stdcall; external TangoDLL;
function LSX_SetTrigCount(LSID: Integer; Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetTrigCount(LSID: Integer; var Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetTVRInPulse(LSID: Integer; Axis: Integer; Direction: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetSnapshot(LSID: Integer; var ASnapshot: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetSnapshotFilter(LSID: Integer; Time: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetSnapshotFilter(LSID: Integer; var Time: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetSnapshotPar(LSID: Integer; var High, AutoMode: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetLimit(LSID: Integer; Axis: Integer; var MinRange, MaxRange: Double): Integer; stdcall; external TangoDLL;
function LSX_JoyChangeAxis(LSID: Integer; Value: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetJoyChangeAxis(LSID: Integer; var Value: LongBool): Integer; stdcall; external TangoDLL;


function LSX_CreateLSID(var LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_FreeLSID(LSID: Integer): Integer; stdcall; external TangoDLL;

implementation

end.

